--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
     <div class="row">
       <div class="column" style="background-color:#f5f1f1;">
         <h2 class="text-field">Date</h2>
-        <p class="value-field">Saturday <br>16th July</p>
+        <p class="value-field">Sunday <br>16th July</p>
       </div>
       <div class="column" style="background-color:#f5f1f1;">
         <h2 class="text-field">Time</h2>
-        <p class="value-field">Party starts <br> at 5:00 pm</p>
+        <p class="value-field">Party starts from 5:00 to 7:00 pm</p>
       </div>
       <div class="column" style="background-color:#f5f1f1;">
         <h2 class="text-field">Location</h2>
@@ -111,7 +111,7 @@
       <div class="timer">
         <a href="https://logwork.com/countdown-zo21" class="countdown-timer" 
         data-style="flip3" data-timezone="Asia/Kolkata" data-textcolor="#06000f" 
-        data-date="2023-07-16 18:00" data-background="#e0dde6" data-digitscolor="#0b1a8a" 
+        data-date="2023-07-16 17:00" data-background="#e0dde6" data-digitscolor="#0b1a8a" 
         data-unitscolor="#000000">Party Starts in</a>
     </div>
       <div class="last-text">See you all on 16th<br>Let's Kick It.</div><br>
